# polymarket_binance_research

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
backtesting/: __init__.py  analytics.py  core.py  edge_analysis.py  run_backtest.py  run_best.py  simulator.py  sweep.py  walk_forward.py
backtesting/output/: wf_calibration_cache.json
backtesting/strategies/: __init__.py  conditional.py  threshold.py
docs/: DATA_GUIDE.md  PRICER_ANALYSIS.md  README.md  UPDATING_CACHE.md  USER_GUIDE.md  debug_checks.md  debug_report.md  estimation.tex  final_model.tex  pricer_guide.md  task.md
marketdata/: README.md  __init__.py
marketdata/data/: __init__.py  cache_manager.py  (+7 more)
notebooks/: 01_data_exploration.ipynb
outputs/: market_merit_results.csv
pricer_calibration/: README.md  __init__.py  config.py  config.yaml
pricing/: README.md  __init__.py  analyze_vs_polymarket.py  calibrate.py  calibrate_to_pm.py  cross_validate.py  dashboard.py  dataset.py  diagnostics.py  market_view.py  plot_variance_calibration.py  pricer.py  run_calibration.py  run_vol_calibration.py  theoretical.txt
scripts/: build_resampled_dataset.py  check_data_availability.py  fundamental_pricer_demo.py  gaussian_ewma_demo.py  market_merit_analysis.py  market_viewer.py  polymarket_calibration.py  polymarket_vs_pricer.py  pricer_calibration_test.py  single_session_pricer_vs_pm.py  sync_resampled_cache.py  test_resampled_bbo.py  test_resampled_performance.py  visualize_prices.py
src/: __init__.py  config.py
tests/: __init__.py  test_alignment.py  test_microstructure.py
(+61 files in other folders)
