[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "polymarket-binance-research"
version = "0.1.0"
description = "Framework for analyzing Polymarket hourly binary options using Binance data"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Luis Safar" }
]
dependencies = [
    "duckdb>=1.1.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "plotly>=5.24.0",
    "pyarrow>=18.0.0",
    "python-dateutil>=2.9.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ipykernel>=6.29.0",
    "jupyterlab>=4.2.0",
    "nbformat>=5.10.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
